--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
 }
+
 body {
     font-family: "Work Sans", sans-serif;
 
@@ -20,6 +22,15 @@ body {
 /* dark */
 .tect-dark-colar {
     color: rgb(66, 66, 66);
+}
+
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+main>section {
+    margin-top: 130px;
 }
 
 /* bg-color */
@@ -86,8 +97,44 @@ img {
     width: 100%;
 }
 
+.teams {
+    align-items: center;
+}
+
+.team-img-contents {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 25px;
+}
+
+.our-features {
+    margin-left: 130px;
+    max-width: 530px;
+}
+
+.features-title {
+    font-family: Work Sans;
+    font-size: 3rem;
+    font-weight: 700;
+}
+
+.features-dispration {
+    color: rgb(114, 114, 114);
+    font-family: Work Sans;
+    font-size: 1rem;
+    margin-bottom: 10px;
+}
+
 @media screen and (max-width:576px) {
-    .brand, .nav-links{
+
+    .brand,
+    .nav-links, .teams {
         flex-direction: column;
+    }
+    .team-img-contents{
+        grid-template-columns: repeat(1 ,1fr);
+    }
+    .our-features{
+        margin-left: 20px;
     }
 }
