--- a/style/style.css
+++ b/style/style.css
@@ -123,6 +123,24 @@ img {
     font-family: Work Sans;
     font-size: 1rem;
     margin-bottom: 10px;
+    
+}
+.facts-container{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    margin-top: 60px;
+}
+.fact-card{
+    border: 1px solid rgb(255, 144, 14);
+    border-radius: 8px;
+    width: 200px;
+    height: 200px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.fact-icon{
+    width: 65px;
 }
 
 @media screen and (max-width:576px) {
@@ -136,5 +154,12 @@ img {
     }
     .our-features{
         margin-left: 20px;
+    }
+    .facts-container{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .fact-card{
+        margin: 0 auto;
+        margin-top: 10px;
     }
 }
