--- a/style/style.css
+++ b/style/style.css
@@ -36,10 +36,12 @@ main>section {
 /* bg-color */
 .bg-light {
     background: rgba(255, 144, 14, 0.1);
+
 }
 
 .navber {
     justify-content: space-between;
+    padding-top: 30px;
 }
 
 .brand {
