--- a/style/style.css
+++ b/style/style.css
@@ -88,6 +88,7 @@ main>section {
     color: rgb(255, 255, 255);
     font-family: Work Sans;
     font-size: 1.1rem;
+    margin-top: 20px;
 }
 
 .banner-title {
